--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
 
-2011/06/26 resolve the problem of hidden file copying issue in Windows
+2011/07/03 make few modifications
+
+2011/06/26 resolve the hidden file copying issue in Windows
 
